--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Monkey Island Tribute, a Webgl Experience - Sébastien Lempens</title>
+    <title>Monkey Island Tribute - Sébastien Lempens</title>
     <meta
       name="description"
       content="Monkey Island Tribute, a Webgl Experience - Sébastien Lempens"
@@ -15,30 +15,8 @@
       href="./static/assets/images/MonkeyIslandTribute-MainTitle.png"
       as="image"
     />
-    <script>
-      // ;(function (w, d, s, l, i) {
-      //   w[l] = w[l] || []
-      //   w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' })
-      //   var f = d.getElementsByTagName(s)[0],
-      //     j = d.createElement(s),
-      //     dl = l != 'dataLayer' ? '&l=' + l : ''
-      //   j.async = true
-      //   j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl
-      //   f.parentNode.insertBefore(j, f)
-      // })(window, document, 'script', 'dataLayer', 'GTM-K3NNQSZ')
-    </script>
   </head>
   <body>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript
-      ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-K3NNQSZ"
-        height="0"
-        width="0"
-        style="display: none; visibility: hidden"
-      ></iframe
-    ></noscript>
-    <!-- End Google Tag Manager (noscript) -->
     <main>
       <h1>
         <div>
